--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/addcabinet.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/addcabinet.html
@@ -1,13 +1,13 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<h1>Додати кабінет</h1>
+<h1>Add Classroom</h1>
 <div class="add-cabinet">
     <form action="{% url 'add_cabinet' %}" method="POST">
         {% csrf_token %}
-        <label for="cab_num">Номер кабінету:</label>
+        <label for="cab_num">Classroom number:</label>
         <input type="text" id="cab_num" name="cab_num" required>
-        <button type="submit">Додати кабінет</button>
+        <button type="submit">Add Classroom</button>
     </form>
 </div>
 {% endblock content %}
