--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/createschool.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/createschool.html
@@ -6,7 +6,7 @@
     <form method="POST" action="{% url 'create_school' %}">
         {% csrf_token %}
 
-        <label>Введіть повну назву школи:</label>
+        <label>Enter the full name of the school:</label>
         <input type="text" name="school_name" placeholder="Enter School Name" required />
 
         <input type="submit" value="Create School" />
