--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/creatingschoolsucces.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/creatingschoolsucces.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <div>
-    <h1>Школа <span style="color: green;">{{school_name}}</span> була додана успішно</h1>
-    <h2>Код вашої школи: <p>{{school_id}}</p></h2>
-    <h2>Пароль адміністратора: <p>{{admin_password}}</p></h2>
+    <h1>School <span style="color: green;">{{school_name}}</span> has been added successfully</h1>
+    <h2>Your school code: <p>{{school_id}}</p></h2>
+    <h2>Administrator password: <p>{{admin_password}}</p></h2>
 </div>
 
 {% endblock content %}
