--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/profile.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/profile.html
@@ -9,7 +9,7 @@
         <a class="back-button" href="/">
             <img src="{% static 'img/arrow-left.png' %}" alt="Back Icon">
         </a>
-        <p class="teacher-title"> {{ full_name }} </p>
+        <p class="teacher-title">{{ full_name }}</p>
         <div class="teacher-icon">
             <img src="{% static 'img/teacher-ico.png' %}" alt="Teacher Icon">
         </div>
@@ -21,10 +21,10 @@
         <div class="info-div">
             <div class="left-info">
                 <div class="registered-info">
-                    <p class="info"> Зареєстрований(-а) </p>
+                    <p class="info"> Registered </p>
                 </div>
                 <div class="classes-info">
-                    <p class="info"> Класи: </p>
+                    <p class="info"> Classes: </p>
                     <div class="classes-info-box">
                         {% for class in classes.keys %}
                             <div class="class-box">
@@ -36,7 +36,7 @@
             </div>
             <div class="right-info">
                 <div class="subjects-info">
-                    <p class="info"> Уроки: </p>
+                    <p class="info"> Subjects: </p>
                     <div class="subjects-info-box">
                         {% for subject in subjects.keys %}
                             <div class="subject-box">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="cabinets-info">
-                    <p class="info"> Кабінети: </p>
+                    <p class="info"> Cabinets: </p>
                     <div class="cabinets-info-box">
                         {% for cab in cabinets.keys %}
                             <div class="cabinet-box">
