--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/singlestudentprofile.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/singlestudentprofile.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="profile-container">
     <h1>{{ full_name }}</h1>
-    <p><strong>Школа:</strong> {{ school_name }}</p>
+    <p><strong>School:</strong> {{ school_name }}</p>
     <p><strong>School Status:</strong> {{ school_status }}</p>
-    <p><strong>Код реєстрації:</strong> {{ register_code }}</p>
+    <p><strong>Registration Code:</strong> {{ register_code }}</p>
 </div>
 {% endblock content %}
