Add requirements and update templates with CSS links; remove unused files

--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/lessoncompleted.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/lessoncompleted.html
@@ -1,5 +1,10 @@
 {% extends 'main.html' %}
+
 {% load static %}
+
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/lessoncompleted.css' %}" />
+{% endblock %}
 
 {% block content %}
     <div class="lesson-cp-page">
