--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/class_report.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/class_report.html
@@ -1,5 +1,11 @@
 {% extends 'main.html' %}
 
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/table.css' %}" />
+{% endblock %}
+
 {% block content %}
 
 {% load custom_filters %}
