--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/home.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/home.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/homepage.css' %}" />
+{% endblock %}
+
 {% block content %}
 
 <div class="home-container">
