--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/lesson.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/lesson.html
@@ -1,8 +1,13 @@
 {% extends 'main.html' %}
 
-{% block content %}
-
 {% load static %}
+
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/lesson.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'styles/classes.css' %}" />
+{% endblock %}
+
+{% block content %}
 
 <div id="lesson-page">
     <div class="header-container">
