--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/myclass.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/myclass.html
@@ -1,8 +1,12 @@
 {% extends 'main.html' %}
 
-{% block content %}
-
 {% load static %}
+
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/classes.css' %}" />
+{% endblock %}
+
+{% block content %}
 
 <div class="my-school-container">
     <div class="upper-div">
