--- a/lessonixapp/lessonixTeacher/templates/lessonixTeacher/schoolclasses.html
+++ b/lessonixapp/lessonixTeacher/templates/lessonixTeacher/schoolclasses.html
@@ -1,8 +1,13 @@
 {% extends 'main.html' %}
 
-{% block content %}
-
 {% load static %}
+
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/classes.css' %}" />
+{% endblock %}
+
+
+{% block content %}
 
 <div class="my-school-container">
     <h1>School Classes</h1>
