--- a/lessonixapp/templates/main.html
+++ b/lessonixapp/templates/main.html
@@ -3,23 +3,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Lessonix</title>
-
-    <link rel="icon" type="image/png" href="{% static 'img/tab_ico.png' %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Lessonix</title>
+    <link rel="icon" type="image/png" href="{% static 'img/tab_ico.png' %}" />
+    
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/login_register.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/lesson.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/lessoncompleted.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/medcabinet.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/table.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/welcomepage.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/classes.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/teachers.css' %}" />
-    <link rel="stylesheet" href="{% static 'styles/startlessonpage.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/homepage.css' %}" />
 
+    {% block css %}
+    {% endblock %}
 </head>
 
 <body>
